objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <customHelp>SVMXC__SVMXC_LaunchHelp</customHelp>
    <description>Installed Product represents one or a collection of product units delivered to a customer and installed at the customer’s location(s). Depending upon the tracking needs of an organization, installed products are tracked using a serial number, a lot/batch number or simply by the product number. In ServiceMax, Installed Product record drives entitlement, material movement and service delivery activities.</description>
    <fields>
        <fullName>ART_Rework__c</fullName>
        <label>ART Rework</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ART__c</fullName>
        <label>ART</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Installed_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SVMXC__Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Firmware_Levels__c</fullName>
        <label>All Firmware Levels Noted and Recorded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyze_CFG_Run_and_Passed__c</fullName>
        <label>Analyze CFG Run and Passed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Loan/Demo</fullName>
                </value>
                <value>
                    <fullName>FSE Stock</fullName>
                </value>
                <value>
                    <fullName>HSV Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDP_PN__c</fullName>
        <label>CDP PN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>25-11353</fullName>
                </value>
                <value>
                    <fullName>25-9305</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDP_Rev__c</fullName>
        <label>CDP Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Stack_Interposers__c</fullName>
        <label>C Stack Interposers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre 3-Dot</fullName>
                </value>
                <value>
                    <fullName>3-Dot</fullName>
                </value>
                <value>
                    <fullName>4-Dot</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cable_Standoffs_Joy_Amp__c</fullName>
        <label>Cable Standoffs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joy</fullName>
                </value>
                <value>
                    <fullName>Amp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cable_Type__c</fullName>
        <label>Cable Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>Joy</fullName>
                </value>
                <value>
                    <fullName>Amp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <description>Case Origin, to be completed in Case Creation Service Flow Manager (SFM) on Installed Product Record</description>
        <inlineHelpText>Case Origin, to be in Case Creation Service Flow Manager (SFM) on Installed Product Record</inlineHelpText>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>CCR</fullName>
                </value>
                <value>
                    <fullName>COS</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Email - IP Support</fullName>
                </value>
                <value>
                    <fullName>Email - SOMA</fullName>
                </value>
                <value>
                    <fullName>Direct Email</fullName>
                </value>
                <value>
                    <fullName>Email - India</fullName>
                </value>
                <value>
                    <fullName>Email - China</fullName>
                </value>
                <value>
                    <fullName>Email - France</fullName>
                </value>
                <value>
                    <fullName>Email - Japan</fullName>
                </value>
                <value>
                    <fullName>Email - Germany</fullName>
                </value>
                <value>
                    <fullName>Email - Korea</fullName>
                </value>
                <value>
                    <fullName>Email - Singapore</fullName>
                </value>
                <value>
                    <fullName>Email - Taiwan</fullName>
                </value>
                <value>
                    <fullName>Email - United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chassis_Side__c</fullName>
        <label>Chassis Side</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Slip_Notes__c</fullName>
        <label>Content Slip Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coolant_Type__c</fullName>
        <label>Coolant Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_to_Release__c</fullName>
        <formula>Install_Release_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Create to Install Release Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer/AE Downloaded and Ran DB?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCC_PN_Rev__c</fullName>
        <label>DCC PN/Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25-11092 - Old</fullName>
                </value>
                <value>
                    <fullName>25-12951</fullName>
                </value>
                <value>
                    <fullName>25-12975 – Joy</fullName>
                </value>
                <value>
                    <fullName>Improved Alignment</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Notched Backshell</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Patch_Level_Verified__c</fullName>
        <description>Select the date when patch level is verified</description>
        <inlineHelpText>Select the date when patch level is verified</inlineHelpText>
        <label>Date Patch Level Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Flush__c</fullName>
        <label>Date of Last Flush</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Top_Up__c</fullName>
        <label>Date of Last Top Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXTERNAL_ID__c</fullName>
        <description>Installed Product External ID</description>
        <externalId>true</externalId>
        <label>EXTERNAL ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expected_Arrival__c</fullName>
        <label>Expected Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_Rate_Metric__c</fullName>
        <label>Flow Rate Metric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LPM (Liters Per Minute)</fullName>
                </value>
                <value>
                    <fullName>GPM (Gallons Per Minute)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flow_Rate__c</fullName>
        <label>Flow Rate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <label>Virtual Host</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_OS__c</fullName>
        <label>Virtual Host OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>RHEL 5.3</fullName>
                </value>
                <value>
                    <fullName>RHEL 5.5</fullName>
                </value>
                <value>
                    <fullName>RHEL 5.8</fullName>
                </value>
                <value>
                    <fullName>RHEL 6.0</fullName>
                </value>
                <value>
                    <fullName>RHEL 6.3</fullName>
                </value>
                <value>
                    <fullName>SLES 11 SP1</fullName>
                </value>
                <value>
                    <fullName>SLES 11 SP2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Water_Used_Multi__c</fullName>
        <label>House Water Used? (Multi Board GSX)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Release_Date__c</fullName>
        <label>Install Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Truncated__c</fullName>
        <formula>LEFT( Installed_Product__c , FIND(&apos;(&apos;, Installed_Product__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Truncated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLX_0_to_Facility_Return__c</fullName>
        <label>LLX #0 to Facility - Return Water Temp</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLX_1_to_Facility_Return_Water_Temp__c</fullName>
        <label>LLX #1 to Facility - Return Water Temp</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <formula>Text(SVMXC__Site__r.SVMXC__Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>SVMXC__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Zip__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_Board_SN__c</fullName>
        <label>EID/MAC address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCM_Interposer_Technology__c</fullName>
        <label>MCM Interposer Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Improved Cinch</fullName>
                </value>
                <value>
                    <fullName>Orig Cinch</fullName>
                </value>
                <value>
                    <fullName>Paricon</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
                <value>
                    <fullName>Neoconix</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Expiry_Date__c</fullName>
        <label>Maintenance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <label>Virtual Host Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Part_Number__c</fullName>
        <label>Manufacturer Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_SN__c</fullName>
        <formula>SVMXC__Top_Level__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Installed Product Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_AC_Voltages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Measure AC Voltages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCC_IP_Addresses__c</fullName>
        <label>NCC IP Addresses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                </value>
                <value>
                    <fullName>DHCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCC_Static_IP_Address__c</fullName>
        <label>NCC Static IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>Private Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_System_Level__c</fullName>
        <label>Other System Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC_TS_Rev__c</fullName>
        <description>only applies to PXP systems and not Palladium II/III</description>
        <label>PSC TS Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A08</fullName>
                    <default>true</default>
                    <label>A08</label>
                </value>
                <value>
                    <fullName>B08_001</fullName>
                </value>
                <value>
                    <fullName>B08_002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSU_FW_Rev__c</fullName>
        <description>only applies to PXP systems and not Palladium II/III</description>
        <label>PSU FW Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2.00</fullName>
                    <default>true</default>
                    <label>2.00</label>
                </value>
                <value>
                    <fullName>2.36</fullName>
                </value>
                <value>
                    <fullName>2.37</fullName>
                </value>
                <value>
                    <fullName>2.36/2.37</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Parent Account.</description>
        <inlineHelpText>Lookup to Parent Account.</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Parent Account)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch_Level__c</fullName>
        <description>Enter patch level</description>
        <inlineHelpText>Enter patch level</inlineHelpText>
        <label>Patch Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_SFR_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending SFR Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Network__c</fullName>
        <label>Private Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Ethernet Switch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductNameOnly__c</fullName>
        <formula>IF(CONTAINS(SVMXC__Product_Name__c, &quot;-&quot;) , TRIM(LEFT(SVMXC__Product_Name__c,FIND(&quot;-&quot;,SVMXC__Product_Name__c)-1)), SVMXC__Product_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductNameOnly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>SVMXC__Product__r.Prod_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>SVMXC__Product__r.Product_Number__c</formula>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Retire_Date__c</fullName>
        <label>Product Retire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Description_Product2__c</fullName>
        <formula>SVMXC__Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Diags_and_Debug_to__c</fullName>
        <label>Run Diags and Debug to Accepted Markout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Time period during which this installed product can be accessed for service. Reference to an existing Business Hours record in Salesforce</description>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Alternate_Company__c</fullName>
        <description>Free text to indicate if another account is involved with this product but is not an existing customer record</description>
        <inlineHelpText>Free text to indicate if another company is involved with this product but is not an existing customer record</inlineHelpText>
        <label>Alternate Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Asset_Tag__c</fullName>
        <description>Another way to identify the installed product. Typically asset tags are assigned by your customers. This will be a timesaver when your customer calls for support and identifies  the product by their asset tag instead of trying to locate your serial number on the product</description>
        <inlineHelpText>Another way to identify the installed product. Asset tags are normally assigned by your customers. When your customer calls for support, they can identify the product by their asset tag instead of trying to locate your serial number on the product.</inlineHelpText>
        <label>Asset Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the physical location address</description>
        <inlineHelpText>“City” part of the physical location address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer account for this installed product. Lookup to an existing salesforce account record</description>
        <inlineHelpText>Name of the customer account for this installed product. Lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzZ0EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzcJEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the physical location address</description>
        <inlineHelpText>“Country” part of the physical location address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Installed__c</fullName>
        <description>Date on which the product was installed at the customer location</description>
        <inlineHelpText>Date on which the product was installed at the customer location</inlineHelpText>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Ordered__c</fullName>
        <description>Date on which this product was ordered by the customer</description>
        <inlineHelpText>Date on which this product was ordered by the customer</inlineHelpText>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Shipped__c</fullName>
        <description>Date on which this product was shipped to the customer originally</description>
        <inlineHelpText>Date on which this product was shipped to the customer originally</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor account if applicable</description>
        <inlineHelpText>Name of the distributor company if applicable</inlineHelpText>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzcLEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor contact if applicable</description>
        <inlineHelpText>Name of the distributor contact if applicable</inlineHelpText>
        <label>Distributor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzc8EAA</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>